--- a/FacebookandGoogle Login/.classpath
+++ b/FacebookandGoogle Login/.classpath
@@ -13,12 +13,17 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/Java jars/Facebook jars/restfb-2022.6.0.jar">
+	<classpathentry kind="lib" path="D:/Java jars/Facebook and Google jars/java-json.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Java jars/Facebook jars/java-json.jar">
+	<classpathentry kind="lib" path="D:/Java jars/Facebook and Google jars/restfb-2022.6.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/Java jars/mysql-connector-java-8.0.29/mysql-connector-java-8.0.29.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
